# dash-roguelike

./: .gitignore  .nvim.lua  CMakeLists.txt  Makefile  README.md  build.bat  clean.bat  todo.txt
assets/: alien.fbx
code/: camera.cpp  camera.h  defines.h  game.cpp  game.h  game_math.cpp  game_math.h  main.cpp  memory.cpp  memory.h  opengl_renderer.cpp  platform.cpp  platform.h  renderer.cpp  renderer.h  renderer_backend.h  ufbx.cpp  win32_platform.cpp
shader/: default.frag  default.vert
